--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "roameo"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2018"
 description = "Test current network state."
+license = "GPL-3.0-only"
 
 [dependencies]
 libc = "0.2"
